[website] Fix Wrapping (#327)

--- a/docs/style.css
+++ b/docs/style.css
@@ -130,6 +130,14 @@ img {
     margin: 0 10px;
 }
 
+summary::-webkit-details-marker {
+    display: none;
+}
+
+summary {
+    list-style: none;
+}
+
 details.benchmark-set {
     margin-top: 20px;
     margin-bottom: 20px;
@@ -142,7 +150,12 @@ details.benchmark-set summary {
     font-weight: bold;
     cursor: pointer;
     outline: none;
+    overflow-wrap: anywhere;
+    white-space: normal;
+    max-width: 100%;
     list-style: none;
+    color: -webkit-link;
+    text-decoration: underline;
 }
 
 details.benchmark-graph-details {
@@ -158,7 +171,12 @@ details.benchmark-graph-details summary.benchmark-graph-title {
     font-weight: bold;
     cursor: pointer;
     outline: none;
+    overflow-wrap: anywhere;
+    white-space: normal;
+    max-width: 100%;
     list-style: none;
+    color: -webkit-link;
+    text-decoration: underline;
 }
 
 .benchmark-chart {
